Add email templates for payment confirmation and declined notifications; implement email handling and formatting improvements